WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54895
[GTK] editing/pasteboard/dataTransfer-setData-getData.html fails
https://bugs.webkit.org/show_bug.cgi?id=54895
Summary
[GTK] editing/pasteboard/dataTransfer-setData-getData.html fails
Alejandro G. Castro
Reported
2011-02-21 11:24:59 PST
Diff file: @@ -36,6 +36,15 @@ --- Test set/get 'text/plain': PASS getDataResultType is "string" PASS getDataResult is "Lorem ipsum dolor sit amet." +--- Test set 'text/plain', get 'text': +PASS getDataResultType is "string" +FAIL getDataResult should be Lorem ipsum dolor sit amet.. Was . +--- Test set 'text', get 'text/plain': +PASS getDataResultType is "string" +FAIL getDataResult should be Lorem ipsum dolor sit amet.. Was Drag me. +--- Test set/get 'text': +PASS getDataResultType is "string" +FAIL getDataResult should be Lorem ipsum dolor sit amet.. Was . PASS successfullyParsed is true TEST COMPLETE
Attachments
Patch
(4.21 KB, patch)
2011-02-21 13:29 PST
,
Martin Robinson
xan.lopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-02-21 13:29:56 PST
Created
attachment 83211
[details]
Patch
Xan Lopez
Comment 2
2011-02-21 13:33:14 PST
Comment on
attachment 83211
[details]
Patch Bam.
Martin Robinson
Comment 3
2011-02-21 13:36:00 PST
Committed
r79249
: <
http://trac.webkit.org/changeset/79249
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug