2011-02-21  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] editing/pasteboard/dataTransfer-setData-getData.html fails
        https://bugs.webkit.org/show_bug.cgi?id=54895

        Update the results for this test which now includes a few more passing
        lines. We maintain separate results, because we seem to pass more tests
        than other platforms.

        * platform/gtk/Skipped: Unskip a test which is now passing.
        * platform/gtk/editing/pasteboard/dataTransfer-setData-getData-expected.txt:
2011-02-21  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] editing/pasteboard/dataTransfer-setData-getData.html fails
        https://bugs.webkit.org/show_bug.cgi?id=54895

        Correct the GTK+ clipboard implementation to know that "text" is an alias
        for "text/html" data. This corrects the failing test.

        * platform/gtk/ClipboardGtk.cpp:
        (WebCore::dataObjectTypeFromHTMLClipboardType): Accept "text" as well as "Text".
        (WebCore::ClipboardGtk::types): Advertise "text" as well as "Text".

Canonical link: https://commits.webkit.org/69176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79249 268f45cc-cd09-0410-ab3c-d52691b4dbfc